Use Java 11 methods